[workspace]
resolver = "2"
members = [
    "common/device",
    "common/connection",
    "ares-package",
    "ares-install",
    "ares-push",
    "ares-launch",
    "ares-device",
    "ares-shell",
]

[workspace.dependencies]
clap = "4.4.6"
serde = "1.0.160"
serde_json = "1.0.96"
libssh-rs = "0.2.1"
libssh-rs-sys = { version = "0.2.1", default-features = false }
sha256 = "1.1.3"
regex = "1.9.6"
indicatif = "0.17.7"
reqwest = "0.11.22"

[patch.crates-io]
libssh-rs = { git = "https://github.com/wez/libssh-rs.git", commit = "38a5fa90970944cf3bd8e7f615bea0b1b9c5d1bb" }
libssh-rs-sys = { git = "https://github.com/wez/libssh-rs.git", commit = "38a5fa90970944cf3bd8e7f615bea0b1b9c5d1bb" }
