[workspace]
resolver = "2"
members = [
    "common/device",
    "common/connection",
    "ares-package",
    "ares-install",
    "ares-push",
    "ares-launch",
    "ares-device",
    "ares-shell",
]

[workspace.dependencies]
clap = "4.4.6"
serde = "1.0.160"
serde_json = "1.0.96"
libssh-rs = "0.3.3"
libssh-rs-sys = { version = "0.2.4", default-features = false }
sha256 = "1.1.3"
regex = "1.9.6"
indicatif = "0.17.7"
reqwest = "0.12.7"
