[workspace]
resolver = "2"
members = [
    "common/device",
    "common/connection",
    "ares-package",
    "ares-install",
    "ares-push",
    "ares-launch",
    "ares-device",
    "ares-shell",
]

[workspace.dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
libssh-rs = "0.3.3"
libssh-rs-sys = { version = "0.2.4", default-features = false }
sha256 = "1.5.0"
regex = "1.11.1"
indicatif = "0.17.8"
reqwest = "0.12.9"
