[package]
name = "ares-device"
version = "0.1.1"
edition = "2021"
authors = ["Mariotaku Lee <mariotaku.lee@gmail.com>"]
license = "Apache-2.0"
description = "Tools for getting device information"

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { version = "4.2.4", features = ["derive", "env"] }
cfg-if = "1.0.0"

[target.'cfg(target_os="windows")'.dependencies]
native-windows-gui = { version = "1.0.12" }
native-windows-derive = "1.0.3"
libssh-rs-sys = { version = "0.2.0", features = ["vendored-openssl", "libz-sys"] }

[target.'cfg(not(target_os="windows"))'.dependencies]
libssh-rs-sys = { version = "0.2.0", default-features = false }

[target.'cfg(all(not(target_os="windows"), not(target_os="macos")))'.dependencies]
gtk = "0.17.1"

[build-dependencies]
embed-manifest = "1.3.1"

[package.metadata.deb]
section = "devel"
