[package]
name = "ares-device"
version = "0.1.1"
edition = "2021"
authors = ["Mariotaku Lee <mariotaku.lee@gmail.com>"]
license = "Apache-2.0"
description = "Tools for getting device information"

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { workspace = true, features = ["derive", "env"] }
cfg-if = "1.0.0"

[target.'cfg(target_os="windows")'.dependencies]
native-windows-gui = { version = "1.0.12" }
native-windows-derive = "1.0.3"
libssh-rs-sys = { workspace = true, features = ["vendored-openssl", "libz-sys"] }

[target.'cfg(not(target_os="windows"))'.dependencies]
libssh-rs-sys = { workspace = true, default-features = false }

[target.'cfg(all(not(target_os="windows"), not(target_os="macos")))'.dependencies]
gtk = "0.18.1"

[build-dependencies]
embed-manifest = "1.4.0"

[package.metadata.deb]
section = "devel"
