[package]
name = "ares-device"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tools for getting device information"

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { workspace = true }
cfg-if = "1.0.4"

[target.'cfg(target_os="windows")'.dependencies]
native-windows-gui = { version = "1.0.13" }
native-windows-derive = "1.0.5"
libssh-rs-sys = { workspace = true, features = [
  "vendored-openssl",
  "libz-sys",
] }

[target.'cfg(not(target_os="windows"))'.dependencies]
libssh-rs-sys = { workspace = true, default-features = false }

[target.'cfg(all(not(target_os="windows"), not(target_os="macos")))'.dependencies]
gtk = "0.18.2"

[build-dependencies]
embed-manifest = "1.5.0"

[package.metadata.deb]
section = "devel"
