[package]
name = "ares-install"
version = "0.1.0"
edition = "2021"
description = "Install or Remove app from a device"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = { version = "4.2.4", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
libssh-rs = { version = "0.1.8" }
sha256 = "1.1.3"
regex = "1.8.1"

[features]
default = ["vendored-openssl"]
vendored-openssl = ["common/vendored-openssl"]