[package]
name = "ares-install"
version = "0.1.5"
edition = "2021"
authors = ["Mariotaku Lee <mariotaku.lee@gmail.com>"]
license = "Apache-2.0"
description = "Install or Remove app from a device"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
libssh-rs = { workspace = true }
sha256 = { workspace = true }
regex = { workspace = true }
indicatif = { workspace = true }

[package.metadata.deb]
section = "devel"