[package]
name = "ares-launch"
version = "0.1.1"
edition = "2021"
authors = ["Mariotaku Lee <mariotaku.lee@gmail.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { version = "4.2.4", features = ["derive", "env"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
libssh-rs = { version = "0.2.0" }

[package.metadata.deb]
section = "devel"