[package]
name = "ares-launch"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
libssh-rs = { workspace = true }

[package.metadata.deb]
section = "devel"
