[package]
name = "ares-package"
version = "0.1.3"
edition = "2021"
authors = ["Mariotaku Lee <mariotaku.lee@gmail.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ar = "0.9.0"
tar = "0.4.41"
flate2 = "1.0.33"
path-slash = "0.2.1"
elf = "0.7.4"
regex = { workspace = true }
walkdir = "2.5.0"

[package.metadata.deb]
section = "devel"