[package]
name = "ares-push"
version = "0.1.3"
edition = "2021"
authors = ["Mariotaku Lee <mariotaku.lee@gmail.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { version = "4.2.4", features = ["derive", "env"] }
path-slash = "0.2.1"
walkdir = "2.3.3"

[package.metadata.deb]
section = "devel"