[package]
name = "ares-push"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { workspace = true, features = ["derive", "env"] }
libssh-rs = { workspace = true }
path-slash = "0.2.1"
walkdir = "2.5.0"

[package.metadata.deb]
section = "devel"
