[package]
name = "ares-shell"
version = "0.1.1"
edition = "2021"
authors = ["Mariotaku Lee <mariotaku.lee@gmail.com>"]
license = "Apache-2.0"

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { workspace = true, features = ["derive", "env"] }
libssh-rs = { workspace = true }
crossbeam-channel = "0.5.13"
crossterm = "0.28.1"
