[package]
name = "ares-shell"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
common-device = { path = "../common/device" }
common-connection = { path = "../common/connection" }
clap = { workspace = true, features = ["derive", "env"] }
libssh-rs = { workspace = true }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
