[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libssh-rs = { version = "0.1.8" }
libssh-rs-sys = "0.1.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
home = "0.5.4"
hex = "0.4.3"
log = "0.4.17"
pathdiff = "0.2.1"
reqwest = { version = "0.11.16", features = ["blocking"] }
snailquote = "0.3.1"
path-slash = "0.2.1"

[features]
default = ["vendored-openssl"]
vendored-openssl = ["libssh-rs-sys/vendored-openssl"]
