[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libssh-rs = { version = "0.1.8" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
home = "0.5.4"
hex = "0.4.3"
log = "0.4.17"
pathdiff = "0.2.1"
reqwest = { version = "0.11.16", features = ["blocking"] }
snailquote = "0.3.1"
path-slash = "0.2.1"
openssl = { version = "=0.10.35" }
openssl-sys = { version = "=0.9.71" }

[target.'cfg(target_os="windows")'.dependencies]
native-windows-gui = { version = "1.0.12" }
native-windows-derive = "1.0.3"
libssh-rs-sys = { version = "0.1.3", features = ["vendored-openssl", "libz-sys"] }

[target.'cfg(not(target_os="windows"))'.dependencies]
native-windows-gui = { version = "1.0.12" }
native-windows-derive = "1.0.3"
libssh-rs-sys = { version = "0.1.3" }

[target.'cfg(all(not(target_os="windows"), not(target_os="macos")))'.dependencies]
gtk = "0.17.1"