[package]
name = "common-connection"
version = "0.1.0"
edition = "2021"

[lib]
name = "ares_common_connection"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
common-device = { path = "../device" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
libssh-rs = { version = "0.1.8" }
reqwest = { version = "0.11.16", features = ["blocking"] }
snailquote = "0.3.1"
path-slash = "0.2.1"
openssl = { version = "=0.10.35" }
openssl-sys = { version = "=0.9.71" }

[target.'cfg(target_os="windows")'.dependencies]
libssh-rs-sys = { version = "0.1.3", features = ["vendored-openssl", "libz-sys"] }

[target.'cfg(not(target_os="windows"))'.dependencies]
libssh-rs-sys = { version = "0.1.3" }