[package]
name = "common-connection"
version = "0.1.1"
edition = "2021"

[lib]
name = "ares_connection_lib"

[dependencies]
common-device = { path = "../device" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
libssh-rs = { workspace = true }
reqwest = { version = "0.11.16", features = ["blocking"] }
snailquote = "0.3.1"
path-slash = "0.2.1"

[target.'cfg(target_os="windows")'.dependencies]
libssh-rs-sys = { version = "0.2.0", features = ["vendored-openssl", "libz-sys"] }

[target.'cfg(not(target_os="windows"))'.dependencies]
libssh-rs-sys = { version = "0.2.0", default-features = false }